--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.16)
 project(RaylibImGui LANGUAGES C CXX)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_C_STANDARD 17)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_EXPORT_COMPILE_COMMANDS True)
 add_library(raylib_imgui_compiler_flags INTERFACE)
@@ -10,11 +12,10 @@ option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
 set(gcc_like_cxx "$<COMPILE_LANG_AND_ID:CXX,ARMClang,AppleClang,Clang,GNU,LCC>")
 set(msvc_cxx "$<COMPILE_LANG_AND_ID:CXX,MSVC>")
 target_compile_options(
-    raylib_imgui_compiler_flags
-    INTERFACE
-        "$<${gcc_like_cxx}:$<BUILD_INTERFACE:-pedantic-errors;;-Wall;-Weffc++;-Wextra;-Wconversion;-Wsign-conversion>>"
+        raylib_imgui_compiler_flags
+        INTERFACE
+        "$<${gcc_like_cxx}:$<BUILD_INTERFACE:-Weffc++;-Wextra;-Wconversion;-Wsign-conversion>>"
         "$<${msvc_cxx}:$<BUILD_INTERFACE:-W4>>")
-
 
 set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${PROJECT_SOURCE_DIR}/cmake")
 option(RUN_TESTS "Enable tests" ON)
@@ -25,23 +26,31 @@ include(Dependencies.cmake)
 raylib_imgui_setup_dependencies()
 
 include(cmake/StaticAnalysers.cmake)
-enable_clang_tidy()
 
-add_executable(RaylibImGuiApp src/main.cpp src/game/game.cpp)
-set_target_properties(RaylibImGuiApp PROPERTIES CXX_CLANG_TIDY
-                                                "${CLANG_TIDY_COMMAND}")
+# Automatically collect source files
+file(GLOB_RECURSE RAYLIB_IMGUI_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/**.cpp")
+#file(GLOB_RECURSE DICOM_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/include/DICOMParser/*.cxx")
+
+add_executable(RaylibImGuiApp ${RAYLIB_IMGUI_SOURCES} ${DICOM_SOURCES})
+
+find_package(OpenMP)
+if(OpenMP_CXX_FOUND)
+    target_link_libraries(RaylibImGuiApp PUBLIC OpenMP::OpenMP_CXX)
+endif()
+
 target_link_libraries(
-    RaylibImGuiApp
-    PUBLIC dbg_macro
-           fmt
-           imgui
-           raylib
-           rlimgui
-           spdlog::spdlog_header_only
-           raylib_imgui_compiler_flags)
+        RaylibImGuiApp
+        PUBLIC dbg_macro
+        fmt
+        imgui
+        raylib
+        rlimgui
+        spdlog::spdlog_header_only
+        raylib_imgui_compiler_flags)
+
 target_compile_definitions(RaylibImGuiApp PRIVATE SPDLOG_FMT_EXTERNAL)
 target_compile_definitions(
-    RaylibImGuiApp PUBLIC ASSETS_PATH="${CMAKE_CURRENT_SOURCE_DIR}/assets/")
+        RaylibImGuiApp PUBLIC ASSETS_PATH="${CMAKE_CURRENT_SOURCE_DIR}/assets/")
 target_include_directories(RaylibImGuiApp PUBLIC "${PROJECT_SOURCE_DIR}/src")
 
 if(APPLE)
@@ -49,6 +58,8 @@ if(APPLE)
     target_link_libraries(RaylibImGuiApp PUBLIC "-framework Cocoa")
     target_link_libraries(RaylibImGuiApp PUBLIC "-framework OpenGL")
 endif()
+
+target_include_directories(RaylibImGuiApp PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/")
 
 option(RUN_UNIT_TESTS "Run Catch2 unit tests" ON)
 if(RUN_UNIT_TESTS)
